--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -299,7 +299,7 @@
                 <svg class="icon" viewBox="0 0 40 40">
                   <use xlink:href="#shopping-cart" x="12%" y="16%"></use>
                 </svg>
-                <sup>0</sup>
+                <sup class="product-count">0</sup>
               </div>
               <div class="cart-drop">
                 <div class="cd-top d-flex justify-content-between align-items-center">
@@ -311,7 +311,7 @@
                   </div>
                 </div>
                 <div class="cd-mid">
-                  <ul>
+                  <ul class="basket-list">
                     <li>Your shopping cart is empty</li>
                   </ul>
                 </div>
@@ -577,7 +577,7 @@
         <div class="porduct-slide">
           <div class="owl-carousel owl-theme">
             <div class="item">
-              <div class="prdct product-top">
+              <div class="prdct product-top" data-id="1">
                 <div class="image">
                   <a href="">
                     <img src="/assets/images/home/products/appleCinema30/1-370x370.jpg" alt="">
@@ -597,12 +597,12 @@
                   </div>
                 </div>
                 <div class="caption">
-                  <h4>Apple Cinema 30"</h4>
-                  <p>$122.00</p>
-                  <button class="animate__animated">ADD TO CART</button>
+                  <h4 class="title">Apple Cinema 30"</h4>
+                  <p>$<span class="price">122.00</span></p>
+                  <button class="to-cart">ADD TO CART</button>
                 </div>
               </div>
-              <div class="prdct product-bottom">
+              <div class="prdct product-bottom" data-id="2">
                 <div class="image">
                   <a href="">
                     <img src="/assets/images/home/products/CanonEos/10-370x370.jpg" alt="">
@@ -622,14 +622,14 @@
                   </div>
                 </div>
                 <div class="caption">
-                  <h4>Canon EOS 5D</h4>
-                  <p>$122.00</p>
-                  <button class="d-none">ADD TO CART</button>
+                  <h4 class="title">Canon EOS 5D</h4>
+                  <p>$<span class="price">122.00</span></p>
+                  <button class="to-cart">ADD TO CART</button>
                 </div>
               </div>
             </div>
             <div class="item">
-              <div class="prdct product-top">
+              <div class="prdct product-top" data-id="3">
                 <div class="image">
                   <a href="">
                     <img src="/assets/images/home/products/HTCtouchHD/12-370x370.jpg" alt="">
@@ -649,12 +649,12 @@
                   </div>
                 </div>
                 <div class="caption">
-                  <h4>HTC Touch HD</h4>
-                  <p>$122.00</p>
-                  <button class="d-none">ADD TO CART</button>
+                  <h4 class="title">HTC Touch HD</h4>
+                  <p>$<span class="price">122.00</span></p>
+                  <button class="to-cart">ADD TO CART</button>
                 </div>
               </div>
-              <div class="prdct product-bottom">
+              <div class="prdct product-bottom" data-id="4">
                 <div class="image">
                   <a href="">
                     <img src="/assets/images/home/products/ipadNano/2-370x370.jpg" alt="">
@@ -674,14 +674,14 @@
                   </div>
                 </div>
                 <div class="caption">
-                  <h4>ipad Nano</h4>
-                  <p>$122.00</p>
-                  <button class="d-none">ADD TO CART</button>
+                  <h4 class="title">ipad Nano</h4>
+                  <p>$<span class="price">122.00</span></p>
+                  <button class="to-cart">ADD TO CART</button>
                 </div>
               </div>
             </div>
             <div class="item">
-              <div class="prdct product-top">
+              <div class="prdct product-top" data-id="5">
                 <div class="image">
                   <a href="">
                     <img src="/assets/images/home/products/ipadShuffle/15-370x370.jpg" alt="">
@@ -701,12 +701,12 @@
                   </div>
                 </div>
                 <div class="caption">
-                  <h4>ipad Shuffle</h4>
-                  <p>$122.00</p>
-                  <button class="d-none">ADD TO CART</button>
+                  <h4 class="title">ipad Shuffle</h4>
+                  <p>$<span class="price">122.00</span></p>
+                  <button class="to-cart">ADD TO CART</button>
                 </div>
               </div>
-              <div class="prdct product-bottom">
+              <div class="prdct product-bottom" data-id="6">
                 <div class="image">
                   <a href="">
                     <img src="/assets/images/home/products/HPlp/11-370x370.jpg" alt="">
@@ -726,14 +726,14 @@
                   </div>
                 </div>
                 <div class="caption">
-                  <h4>HP LP3065</h4>
-                  <p>$122.00</p>
-                  <button class="d-none">ADD TO CART</button>
+                  <h4 class="title">HP LP3065</h4>
+                  <p>$<span class="price">122.00</span></p>
+                  <button class="to-cart">ADD TO CART</button>
                 </div>
               </div>
             </div>
             <div class="item">
-              <div class="prdct product-top">
+              <div class="prdct product-top" data-id="7">
                 <div class="image">
                   <a href="">
                     <img src="/assets/images/home/products/imac/13-370x370.jpg" alt="">
@@ -753,12 +753,12 @@
                   </div>
                 </div>
                 <div class="caption">
-                  <h4>iMac</h4>
-                  <p>$122.00</p>
-                  <button class="d-none">ADD TO CART</button>
+                  <h4 class="title">iMac</h4>
+                  <p>$<span class="price">122.00</span></p>
+                  <button class="to-cart">ADD TO CART</button>
                 </div>
               </div>
-              <div class="prdct product-bottom">
+              <div class="prdct product-bottom" data-id="8">
                 <div class="image">
                   <a href="">
                     <img src="/assets/images/home/products/ipadClassic/15-370x370 (1).jpg" alt="">
@@ -778,9 +778,9 @@
                   </div>
                 </div>
                 <div class="caption">
-                  <h4>iPad Classic</h4>
-                  <p>$122.00</p>
-                  <button class="d-none">ADD TO CART</button>
+                  <h4 class="title">iPad Classic</h4>
+                  <p>$<span class="price">122.00</span></p>
+                  <button class="to-cart">ADD TO CART</button>
                 </div>
               </div>
             </div>
@@ -1306,5 +1306,6 @@
     <script src="/assets/js/header.js"></script>
     <script src="/assets/js/footer.js"></script>
     <script src="/assets/js/sm-header.js"></script>
+    <script src="/assets/js/basket.js"></script>
   </body>
 </html>
