--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -312,22 +312,22 @@
                 </div>
                 <div class="cd-mid">
                   <ul class="basket-list">
-                    <li>Your shopping cart is empty</li>
+                    <li class="when-empty">Your shopping cart is empty</li>
                   </ul>
                 </div>
                 <div class="cd-btm">
                   <ul>
                     <li>
-                      <span>Sub-Total</span><span>0<span>$</span></span>
+                      <span>Sub-Total</span><span class="sub-total">0<span>$</span></span>
                     </li>
                     <li>
-                      <span>Eco Tax (-2.00)</span><span>0<span>$</span></span>
+                      <span>Eco Tax (-2.00)</span><span class="eco-tax">0<span>$</span></span>
                     </li>
                     <li>
-                      <span>VAT (20%)</span><span>0<span>$</span></span>
+                      <span>VAT (20%)</span><span class="vat">0<span>$</span></span>
                     </li>
                     <li>
-                      <span>Total</span><span>0<span>$</span></span>
+                      <span>Total</span><span class="total">0<span>$</span></span>
                     </li>
                   </ul>
                   <div class="buttons">
@@ -598,7 +598,7 @@
                 </div>
                 <div class="caption">
                   <h4 class="title">Apple Cinema 30"</h4>
-                  <p>$<span class="price">122.00</span></p>
+                  <p>$<span class="price">122</span>.00</p>
                   <button class="to-cart">ADD TO CART</button>
                 </div>
               </div>
