--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -107,7 +107,9 @@
       <div class="container">
         <div class="row" style="width: 100%">
           <div class="logo col-lg-3 col-md-3 col-sm-3 d-flex">
-            <img src="/assets/images/Logo.png" alt="logo" />
+            <a href="/assets/html/home.html">
+              <img src="/assets/images/Logo.png" alt="logo" />
+            </a>
           </div>
           <div class="nav-bar col-lg-7 col-md-7 col-sm-12 d-flex col-md-">
             <nav class="d-flex">
@@ -241,8 +243,8 @@
               </svg>
               <div class="login-drop" style="display: none">
                 <ul style="list-style: none">
-                  <li><a href="" style="text-decoration: none">Register</a></li>
-                  <li><a href="" style="text-decoration: none">Login</a></li>
+                  <li><a href="/assets/html/register.html" style="text-decoration: none">Register</a></li>
+                  <li><a href="/assets/html/login.html" style="text-decoration: none">Login</a></li>
                   <li>
                     <a href="" style="text-decoration: none">Wish List(0)</a>
                   </li>
@@ -579,7 +581,7 @@
             <div class="item">
               <div class="prdct product-top" data-id="1">
                 <div class="image">
-                  <a href="">
+                  <a href="/assets/html/product.html" target="_blank">
                     <img src="/assets/images/home/products/appleCinema30/1-370x370.jpg" alt="">
                     <img src="/assets/images/home/products/appleCinema30/10-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
                   </a>
@@ -604,7 +606,7 @@
               </div>
               <div class="prdct product-bottom" data-id="2">
                 <div class="image">
-                  <a href="">
+                  <a href="/assets/html/product.html" target="_blank">
                     <img src="/assets/images/home/products/CanonEos/10-370x370.jpg" alt="">
                     <img src="/assets/images/home/products/CanonEos/11-370x370.jpg" alt="">
                   </a>
@@ -631,7 +633,7 @@
             <div class="item">
               <div class="prdct product-top" data-id="3">
                 <div class="image">
-                  <a href="">
+                  <a href="/assets/html/product.html" target="_blank">
                     <img src="/assets/images/home/products/HTCtouchHD/12-370x370.jpg" alt="">
                     <img src="/assets/images/home/products/HTCtouchHD/15-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
                   </a>
@@ -656,7 +658,7 @@
               </div>
               <div class="prdct product-bottom" data-id="4">
                 <div class="image">
-                  <a href="">
+                  <a href="/assets/html/product.html" target="_blank">
                     <img src="/assets/images/home/products/ipadNano/2-370x370.jpg" alt="">
                     <img src="/assets/images/home/products/ipadNano/16-370x370.jpg" alt="">
                   </a>
@@ -683,7 +685,7 @@
             <div class="item">
               <div class="prdct product-top" data-id="5">
                 <div class="image">
-                  <a href="">
+                  <a href="/assets/html/product.html" target="_blank">
                     <img src="/assets/images/home/products/ipadShuffle/15-370x370.jpg" alt="">
                     <img src="/assets/images/home/products/ipadShuffle/17-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
                   </a>
@@ -708,7 +710,7 @@
               </div>
               <div class="prdct product-bottom" data-id="6">
                 <div class="image">
-                  <a href="">
+                  <a href="/assets/html/product.html" target="_blank">
                     <img src="/assets/images/home/products/HPlp/11-370x370.jpg" alt="">
                     <img src="/assets/images/home/products/HPlp/18-370x370.jpg" alt="">
                   </a>
@@ -735,7 +737,7 @@
             <div class="item">
               <div class="prdct product-top" data-id="7">
                 <div class="image">
-                  <a href="">
+                  <a href="/assets/html/product.html" target="_blank">
                     <img src="/assets/images/home/products/imac/13-370x370.jpg" alt="">
                     <img src="/assets/images/home/products/imac/15-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
                   </a>
@@ -760,7 +762,7 @@
               </div>
               <div class="prdct product-bottom" data-id="8">
                 <div class="image">
-                  <a href="">
+                  <a href="/assets/html/product.html" target="_blank">
                     <img src="/assets/images/home/products/ipadClassic/15-370x370 (1).jpg" alt="">
                     <img src="/assets/images/home/products/ipadClassic/18-370x370.jpg" alt="">
                   </a>
