--- a/assets/html/product.html
+++ b/assets/html/product.html
@@ -45,7 +45,9 @@
       <div class="container">
         <div class="row" style="width: 100%">
           <div class="logo col-lg-3 col-md-3 col-sm-3 d-flex">
-            <img src="/assets/images/Logo.png" alt="logo" />
+            <a href="/assets/html/home.html">
+              <img src="/assets/images/Logo.png" alt="logo" />
+            </a>
           </div>
           <div class="nav-bar col-lg-7 col-md-7 col-sm-12 d-flex col-md-">
             <nav class="d-flex">
@@ -179,8 +181,8 @@
               </svg>
               <div class="login-drop" style="display: none">
                 <ul style="list-style: none">
-                  <li><a href="" style="text-decoration: none">Register</a></li>
-                  <li><a href="" style="text-decoration: none">Login</a></li>
+                  <li><a href="/assets/html/register.html" style="text-decoration: none">Register</a></li>
+                  <li><a href="/assets/html/login.html" style="text-decoration: none">Login</a></li>
                   <li>
                     <a href="" style="text-decoration: none">Wish List(0)</a>
                   </li>
