--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -46,7 +46,9 @@
       <div class="container">
         <div class="row" style="width: 100%">
           <div class="logo col-lg-3 col-md-3 col-sm-3 d-flex">
-            <img src="/assets/images/Logo.png" alt="logo" />
+            <a href="/assets/html/home.html">
+              <img src="/assets/images/Logo.png" alt="logo" />
+            </a>
           </div>
           <div class="nav-bar col-lg-7 col-md-7 col-sm-12 d-flex col-md-">
             <nav class="d-flex">
