--- a/assets/html/cart.html
+++ b/assets/html/cart.html
@@ -31,18 +31,18 @@
     <link rel="stylesheet" href="/assets/css/owl.carousel.css" />
     <link rel="stylesheet" href="/assets/css/owl.theme.default.css" />
     <link rel="stylesheet" href="/assets/css/slick.css" />
-    <link rel="stylesheet" href="/assets/css/productStyle.css" />
+    <link rel="stylesheet" href="/assets/css/productStyle.css"/>
+    <link rel="stylesheet" href="/assets/css/cartStyle.css"/>
     <link rel="stylesheet" href="/assets/css/header.css" />
     <link rel="stylesheet" href="/assets/css/footer.css" />
     <link rel="stylesheet" href="/assets/css/slide.css" />
-    <link rel="stylesheet" href="/assets/css/productStyle.css">
     <link rel="icon" href="/assets/images/cart.png" />
     <title>Shopping Cart</title>
   </head>
 </html>
 <body>
     <div style="height: 90px;"></div>
-    <header id="lg-head" class="d-lg-flex d-none animate__animated porduct-page">
+    <header id="lg-head" class="d-lg-flex d-none animate__animated">
       <div class="container">
         <div class="row" style="width: 100%">
           <div class="logo col-lg-3 col-md-3 col-sm-3 d-flex">
@@ -52,7 +52,7 @@
           </div>
           <div class="nav-bar col-lg-7 col-md-7 col-sm-12 d-flex col-md-">
             <nav class="d-flex">
-              <ul id="product-page-nav" class="d-flex">
+              <ul class="d-flex">
                 <li class="drone">
                   <a href="">Drone</a>
                   <div class="drop-down drone-drop row" style="display: none">
@@ -138,17 +138,17 @@
               </ul>
             </nav>
           </div>
-          <div id="product-nav-icon" class="search-cart-login col-lg-2 d-flex">
+          <div class="search-cart-login col-lg-2 d-flex">
             <div class="search">
               <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
                 <symbol id="magnifying-desktop" viewBox="0 0 1200 1200">
                   <title>magnifying-desktop</title>
                   <path
                     d="M606.209,578.714L448.198,423.228C489.576,378.272,515,318.817,515,253.393C514.98,113.439,399.704,0,257.493,0
-                             C115.282,0,0.006,113.439,0.006,253.393s115.276,253.393,257.487,253.393c61.445,0,117.801-21.253,162.068-56.586
-                             l158.624,156.099c7.729,7.614,20.277,7.614,28.006,0C613.938,598.686,613.938,586.328,606.209,578.714z M257.493,467.8
-                             c-120.326,0-217.869-95.993-217.869-214.407S137.167,38.986,257.493,38.986c120.327,0,217.869,95.993,217.869,214.407
-                             S377.82,467.8,257.493,467.8z"
+                           C115.282,0,0.006,113.439,0.006,253.393s115.276,253.393,257.487,253.393c61.445,0,117.801-21.253,162.068-56.586
+                           l158.624,156.099c7.729,7.614,20.277,7.614,28.006,0C613.938,598.686,613.938,586.328,606.209,578.714z M257.493,467.8
+                           c-120.326,0-217.869-95.993-217.869-214.407S137.167,38.986,257.493,38.986c120.327,0,217.869,95.993,217.869,214.407
+                           S377.82,467.8,257.493,467.8z"
                   ></path>
                 </symbol>
               </svg>
@@ -167,13 +167,13 @@
                   <title>user-desktop</title>
                   <path
                     d="M187.497,152.427H73.974c-38.111,0-69.117,31.006-69.117,69.117v39.928h251.758v-39.928
-                           C256.614,183.433,225.608,152.427,187.497,152.427z M241.614,246.473H19.856v-24.928c0-29.84,24.277-54.117,54.117-54.117h113.523
-                           c29.84,0,54.117,24.277,54.117,54.117L241.614,246.473L241.614,246.473z"
+                         C256.614,183.433,225.608,152.427,187.497,152.427z M241.614,246.473H19.856v-24.928c0-29.84,24.277-54.117,54.117-54.117h113.523
+                         c29.84,0,54.117,24.277,54.117,54.117L241.614,246.473L241.614,246.473z"
                   ></path>
                   <path
                     d="M130.735,145.326c40.066,0,72.663-32.597,72.663-72.663S170.802,0,130.735,0S58.072,32.596,58.072,72.663
-                           S90.669,145.326,130.735,145.326z M130.735,15c31.796,0,57.663,25.867,57.663,57.663s-25.867,57.663-57.663,57.663
-                           s-57.663-25.868-57.663-57.663S98.939,15,130.735,15z"
+                         S90.669,145.326,130.735,145.326z M130.735,15c31.796,0,57.663,25.867,57.663,57.663s-25.867,57.663-57.663,57.663
+                         s-57.663-25.868-57.663-57.663S98.939,15,130.735,15z"
                   ></path>
                 </symbol>
               </svg>
@@ -182,8 +182,8 @@
               </svg>
               <div class="login-drop" style="display: none">
                 <ul style="list-style: none">
-                  <li><a href="" style="text-decoration: none">Register</a></li>
-                  <li><a href="" style="text-decoration: none">Login</a></li>
+                  <li><a href="/assets/html/register.html" style="text-decoration: none">Register</a></li>
+                  <li><a href="/assets/html/login.html" style="text-decoration: none">Login</a></li>
                   <li>
                     <a href="" style="text-decoration: none">Wish List(0)</a>
                   </li>
@@ -222,6 +222,7 @@
               </div>
             </div>
             <div class="cart">
+              <div class="wrap" style=" display: none;transition: 0.5s;position: fixed; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.7); width: 100%; height: 100vh;"></div>
               <div class="cart-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
                   <symbol id="shopping-cart" viewBox="0 0 700 700">
@@ -240,50 +241,35 @@
                 <svg class="icon" viewBox="0 0 40 40">
                   <use xlink:href="#shopping-cart" x="12%" y="16%"></use>
                 </svg>
-                <sup>0</sup>
+                <sup class="product-count">0</sup>
               </div>
               <div class="cart-drop">
-                <div
-                  class="cd-top d-flex justify-content-between align-items-center"
-                >
-                  <span style="font-size: 14px">CART</span>
-                  <div
-                    class="svg d-flex align-items-center justify-content-end"
-                  >
-                    <svg
-                      width="20px"
-                      height="20px"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        clip-rule="evenodd"
-                        d="M5.29289 5.29289C5.68342 4.90237 6.31658 4.90237 6.70711 5.29289L12 10.5858L17.2929 5.29289C17.6834 4.90237 18.3166 4.90237 18.7071 5.29289C19.0976 5.68342 19.0976 6.31658 18.7071 6.70711L13.4142 12L18.7071 17.2929C19.0976 17.6834 19.0976 18.3166 18.7071 18.7071C18.3166 19.0976 17.6834 19.0976 17.2929 18.7071L12 13.4142L6.70711 18.7071C6.31658 19.0976 5.68342 19.0976 5.29289 18.7071C4.90237 18.3166 4.90237 17.6834 5.29289 17.2929L10.5858 12L5.29289 6.70711C4.90237 6.31658 4.90237 5.68342 5.29289 5.29289Z"
-                        fill="gray"
-                      />
-                    </svg>
+                <div class="cd-top d-flex justify-content-between align-items-center">
+                  <span style="font-size: 14px;">CART</span>
+                  <div class="svg d-flex align-items-center justify-content-end">
+                    <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M5.29289 5.29289C5.68342 4.90237 6.31658 4.90237 6.70711 5.29289L12 10.5858L17.2929 5.29289C17.6834 4.90237 18.3166 4.90237 18.7071 5.29289C19.0976 5.68342 19.0976 6.31658 18.7071 6.70711L13.4142 12L18.7071 17.2929C19.0976 17.6834 19.0976 18.3166 18.7071 18.7071C18.3166 19.0976 17.6834 19.0976 17.2929 18.7071L12 13.4142L6.70711 18.7071C6.31658 19.0976 5.68342 19.0976 5.29289 18.7071C4.90237 18.3166 4.90237 17.6834 5.29289 17.2929L10.5858 12L5.29289 6.70711C4.90237 6.31658 4.90237 5.68342 5.29289 5.29289Z" fill="gray"/>
+                      </svg>
                   </div>
                 </div>
                 <div class="cd-mid">
-                  <ul>
-                    <li>Your shopping cart is empty</li>
+                  <ul class="basket-list">
+                    <li class="when-empty">Your shopping cart is empty</li>
                   </ul>
                 </div>
                 <div class="cd-btm">
                   <ul>
                     <li>
-                      <span>Sub-Total</span><span>0<span>$</span></span>
+                      <span>Sub-Total</span><span class="sub-total">0<span>$</span></span>
                     </li>
                     <li>
-                      <span>Eco Tax (-2.00)</span><span>0<span>$</span></span>
+                      <span>Eco Tax (-2.00)</span><span class="eco-tax">0<span>$</span></span>
                     </li>
                     <li>
-                      <span>VAT (20%)</span><span>0<span>$</span></span>
+                      <span>VAT (20%)</span><span class="vat">0<span>$</span></span>
                     </li>
                     <li>
-                      <span>Total</span><span>0<span>$</span></span>
+                      <span>Total</span><span class="total">0<span>$</span></span>
                     </li>
                   </ul>
                   <div class="buttons">
@@ -311,7 +297,34 @@
             </a>
           </div>
         </div>
-      </section>
+    </section>
+    <section id="cart">
+      <div class="container">
+        <div class="when-empty">
+          <div class="cart-empty">
+            <h4>Your shopping cart is empty!</h4>
+          </div>
+          <div class="contunie">
+            <button>
+              <a href="/assets/html/home.html">CONTUNIE</a>
+            </button>
+          </div>
+        </div>
+        <table class="cart-table" style="width: 100%;">
+          <thead>
+            <tr>
+              <th style="text-align: center">IMAGE</th>
+              <th>PRODUCT NAME</th>
+              <th>MODEL</th>
+              <th>QUANTITY</th>
+              <th>UNIT PRICE</th>
+              <th>TOTAL</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
     <footer>
         <div class="footer-top">
           <div class="container">
@@ -647,7 +660,7 @@
         <a class="go-top" href="" target="_top"
           ><i class="fa-solid fa-chevron-up"></i
         ></a>
-      </footer>
+    </footer>
 <!-- js -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script
@@ -660,10 +673,10 @@
       integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
       crossorigin="anonymous"
     ></script>
-    <script src="/assets/js/owl.carousel.js"></script>
-    <script src="/assets/js/slick.js"></script>
-    <script src="/assets/js/header.js"></script>
-    <script src="/assets/js/footer.js"></script>
-    <script src="/assets/js/product.js"></script>
-    <script src="/assets/js/sm-header.js"></script>
+    <script src="../js/owl.carousel.js"></script>
+    <script src="../js/header.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/product.js"></script>
+    <script src="../js/sm-header.js"></script>
+    <script src="../js/basket.js"></script>
 </body>
