--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -14,9 +14,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.css" />
-    <link rel="stylesheet" href="/assets/fontawesome/css/fontawesome.css" />
-    <link rel="stylesheet" href="/assets/fontawesome/css/solid.css" />
+    <link rel="stylesheet" href="../fontawesome/css/all.css" />
+    <link rel="stylesheet" href="../fontawesome/css/fontawesome.css" />
+    <link rel="stylesheet" href="../fontawesome/css/solid.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
@@ -27,15 +27,13 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/assets/css/owl.carousel.css" />
-    <link rel="stylesheet" href="/assets/css/owl.theme.default.css" />
-    <link rel="stylesheet" href="/assets/css/slick.css" />
-    <link rel="stylesheet" href="/assets/css/productStyle.css" />
-    <link rel="stylesheet" href="/assets/css/header.css" />
-    <link rel="stylesheet" href="/assets/css/footer.css" />
-    <link rel="stylesheet" href="/assets/css/loginStyle.css"/>
-    <link rel="icon" href="/assets/images/cart.png" />
+    <link rel="stylesheet" href="../css/owl.carousel.css" />
+    <link rel="stylesheet" href="../css/owl.theme.default.css" />
+    <link rel="stylesheet" href="../css/go-home.css" />
+    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/loginStyle.css"/>
+    <link rel="icon" href="../images/cart.png" />
     <title>Account Login</title>
   </head>
   <body>
@@ -50,7 +48,7 @@
           </div>
           <div class="nav-bar col-lg-7 col-md-7 col-sm-12 d-flex col-md-">
             <nav class="d-flex">
-              <ul id="product-page-nav" class="d-flex">
+              <ul id="other-page-nav" class="d-flex">
                 <li class="drone">
                   <a href="">Drone</a>
                   <div class="drop-down drone-drop row" style="display: none">
@@ -136,7 +134,7 @@
               </ul>
             </nav>
           </div>
-          <div id="product-nav-icon" class="search-cart-login col-lg-2 d-flex">
+          <div id="other-nav-icon" class="search-cart-login col-lg-2 d-flex">
             <div class="search">
               <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
                 <symbol id="magnifying-desktop" viewBox="0 0 1200 1200">
@@ -182,14 +180,14 @@
                 <ul style="list-style: none">
                   <li>
                     <a
-                      href="/assets/html/register.html"
+                      href="./register.html"
                       style="text-decoration: none"
                       >Register</a
                     >
                   </li>
                   <li>
                     <a
-                      href="/assets/html/login.html"
+                      href="./login.html"
                       style="text-decoration: none"
                       >Login</a
                     >
@@ -329,6 +327,95 @@
     <section id="login-page">
       <div class="container">
         <div class="row">
+          <div class="left-bar">
+            <div class="categories">
+              <div class="head">
+                <h5>CATEGORIES</h5>
+              </div>
+              <div class="body">
+                <ul>
+                  <li>Drone (15)</li>
+                  <li>Accesories (12)</li>
+                  <li>Collection (3)</li>
+                  <li>Components (3)</li>
+                  <li>Outfits (3)</li>
+                  <li>Brands (3)</li>
+                </ul>
+              </div>
+            </div>
+            <div class="bestsellers">
+              <div class="head">
+                <h5>CATEGORIES</h5>
+              </div>
+              <div class="body">
+                <div class="products">
+                  <img src="/assets/images/category/11-85x85.jpg" alt="">
+                  <div class="product-detail">
+                    <h6>iPod Nano</h6>
+                    <span>$122.00</span>
+                  </div>
+                  </div>
+                <div class="products">
+                  <img src="/assets/images/category/12-85x85.jpg" alt="">
+                  <div class="product-detail">
+                    <h6>iPod Shuffle</h6>
+                    <span>$122.00</span>
+                  </div>
+                </div>
+                <div class="products">
+                  <img src="/assets/images/category/16-85x85.jpg" alt="">
+                  <div class="product-detail">
+                    <h6>HTC Touch HD</h6>
+                    <span>$122.00</span>
+                  </div>
+                </div>
+                <div class="products">
+                  <img src="/assets/images/category/17-85x85.jpg" alt="">
+                  <div class="product-detail">
+                    <h6>HP LP3065</h6>
+                    <span>$122.00</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="latest-products">
+              <div class="head">
+                <h5>LATEST PRODUCTS</h5>
+              </div>
+              <div class="body">
+                <div class="products">
+                  <img src="/assets/images/category/11-85x85.jpg" alt="">
+                  <div class="product-detail">
+                    <h6>iPod Nano</h6>
+                    <span>$20.00</span>
+                    <span class="discount">241.99</span>
+                  </div>
+                  </div>
+                <div class="products">
+                  <img src="/assets/images/category/12-85x85.jpg" alt="">
+                  <div class="product-detail">
+                    <h6>iPod Shuffle</h6>
+                    <span>$38.00</span>
+                    <span class="discount">241.99</span>
+                  </div>
+                </div>
+                <div class="products">
+                  <img src="/assets/images/category/16-85x85.jpg" alt="">
+                  <div class="product-detail">
+                    <h6>HTC Touch HD</h6>
+                    <span>$122.00</span>
+                  </div>
+                </div>
+                <div class="products">
+                  <img src="/assets/images/category/17-85x85.jpg" alt="">
+                  <div class="product-detail">
+                    <h6>HP LP3065</h6>
+                    <span>$122.00</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="login">
             <div class="new-customer">
               <h5>New Customer</h5>
@@ -336,7 +423,22 @@
               <p>By creating an account you will be able to shop faster, be up to date on an order's status, and keep track of the orders you have previously made.</p>
               <button><a href="/assets/html/register.html">CONTINUE</a></button>
             </div>
-            <div class="returning-customer"></div>
+            <div class="returning-customer">
+              <h5>Returning Customer</h5>
+              <h6>I am a returning customer</h6>
+              <form action="">
+                <div class="email">
+                  <label for="">E-Mail Address</label><br>
+                  <input type="email" placeholder="E-Mail Address">
+                </div>
+                <div class="password">
+                  <label for="">Password</label><br>
+                  <input type="password" placeholder="Password">
+                </div>
+                <a href="">Forgotten Password</a>
+                <button><a href="/assets/html/register.html">LOGIN</a></button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -636,7 +738,6 @@
       ></a>
     </footer>
     <!-- js -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -647,11 +748,11 @@
       integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
       crossorigin="anonymous"
     ></script>
-    <script src="/assets/js/owl.carousel.js"></script>
-    <script src="/assets/js/slick.js"></script>
-    <script src="/assets/js/header.js"></script>
-    <script src="/assets/js/footer.js"></script>
-    <script src="/assets/js/product.js"></script>
-    <script src="/assets/js/sm-header.js"></script>
+    <script src="../js/owl.carousel.js"></script>
+    <script src="../js/slick.js"></script>
+    <script src="../js/header.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/sm-header.js"></script>
+    <script src="../js/basket.js"></script>
   </body>
 </html>
