--- a/assets/html/product.html
+++ b/assets/html/product.html
@@ -14,9 +14,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.css" />
-    <link rel="stylesheet" href="/assets/fontawesome/css/fontawesome.css" />
-    <link rel="stylesheet" href="/assets/fontawesome/css/solid.css" />
+    <link rel="stylesheet" href="../fontawesome/css/all.css" />
+    <link rel="stylesheet" href="../fontawesome/css/fontawesome.css" />
+    <link rel="stylesheet" href="../fontawesome/css/solid.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
@@ -27,16 +27,13 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/assets/css/owl.carousel.css" />
-    <link rel="stylesheet" href="/assets/css/owl.theme.default.css" />
-    <link rel="stylesheet" href="/assets/css/slick.css" />
-    <link rel="stylesheet" href="/assets/css/productStyle.css" />
-    <link rel="stylesheet" href="/assets/css/header.css" />
-    <link rel="stylesheet" href="/assets/css/footer.css" />
-    <link rel="stylesheet" href="/assets/css/slide.css" />
-    <link rel="stylesheet" href="/assets/css/productStyle.css">
-    <link rel="icon" href="/assets/images/cart.png" />
+    <link rel="stylesheet" href="../css/owl.carousel.css" />
+    <link rel="stylesheet" href="../css/owl.theme.default.css" />
+    <link rel="stylesheet" href="../css/go-home.css">
+    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/productStyle.css">
+    <link rel="icon" href="../images/cart.png" />
     <title>HTC Touch HD</title>
   </head>
   <body>
@@ -51,7 +48,7 @@
           </div>
           <div class="nav-bar col-lg-7 col-md-7 col-sm-12 d-flex col-md-">
             <nav class="d-flex">
-              <ul id="product-page-nav" class="d-flex">
+              <ul id="other-page-nav" class="d-flex">
                 <li class="drone">
                   <a href="">Drone</a>
                   <div class="drop-down drone-drop row" style="display: none">
@@ -137,7 +134,7 @@
               </ul>
             </nav>
           </div>
-          <div id="product-nav-icon" class="search-cart-login col-lg-2 d-flex">
+          <div id="other-nav-icon" class="search-cart-login col-lg-2 d-flex">
             <div class="search">
               <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
                 <symbol id="magnifying-desktop" viewBox="0 0 1200 1200">
@@ -181,8 +178,8 @@
               </svg>
               <div class="login-drop" style="display: none">
                 <ul style="list-style: none">
-                  <li><a href="/assets/html/register.html" style="text-decoration: none">Register</a></li>
-                  <li><a href="/assets/html/login.html" style="text-decoration: none">Login</a></li>
+                  <li><a href="./register.html" style="text-decoration: none">Register</a></li>
+                  <li><a href="./login.html" style="text-decoration: none">Login</a></li>
                   <li>
                     <a href="" style="text-decoration: none">Wish List(0)</a>
                   </li>
@@ -800,7 +797,6 @@
         ></a>
       </footer>
       <!-- js -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -811,11 +807,11 @@
       integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
       crossorigin="anonymous"
     ></script>
-    <script src="/assets/js/owl.carousel.js"></script>
-    <script src="/assets/js/slick.js"></script>
-    <script src="/assets/js/header.js"></script>
-    <script src="/assets/js/footer.js"></script>
-    <script src="/assets/js/product.js"></script>
-    <script src="/assets/js/sm-header.js"></script>
+    <script src="../js/owl.carousel.js"></script>
+    <script src="../js/header.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/product.js"></script>
+    <script src="../js/sm-header.js"></script>
+    <script src="../js/basket.js"></script>
   </body>
 </html>
